[package]
name = "blog"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]

[dependencies]
diesel = { version = "0.12", features = ["chrono"] }
diesel_codegen = { version = "0.12", features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.12"

log = "0.3"
env_logger = "0.4"
dotenv = "0.10"
time = "0.1"
quick-error = "1.1"

chrono = { version = "0.3", features = ["serde"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
markdown = "0.2"
hyper = "0.10"

iron = "0.5"
router = "0.5"
mount = "0.3"
bodyparser = "0.6"
persistent = "0.3"
urlencoded = "0.5"
jwt = "0.4"
rust-crypto = "0.2"
pwhash = "0.1"

[dependencies.iron_diesel_middleware]
git = "https://github.com/darayus/iron-diesel-middleware"

[profile.release]
lto = true
