[package]
name = "blog"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]

[dependencies]
diesel = { version = "0.12", features = ["chrono"] }
diesel_codegen = { version = "0.12", features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.12"

log = "0.3"
env_logger = "0.4"
dotenv = "0.10"
time = "0.1"
error-chain = "*"

chrono = { version = "0.3", features = ["serde"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
markdown = "0.2"
reqwest = "0.5"

rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"

ring-pwhash = "0.1"